# core-space

./: Cargo.toml
rospy-core/: pyproject.toml
rospy-core/rospy_core/: talker.py
src/: main.rs
