[tool.poetry]
name = "rospy-core"
version = "0.1.0"
description = ""
authors = ["Athul Muralidhar <athul@keana.io>"]
readme = "README.md"
packages = [{include = "rospy_core"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
